<resources>
    <string name="app_name">Eliteapartments</string>
    <string name="maximo_huespedes">Máximo de huéspedes</string>
    <string name="camas_por_propiedad">Camas por propiedad</string>
    <string name="cantidad_banos">Cantidad de baños</string>
    <string name="titulo_propiedad">Título de la propiedad</string>
    <string name="descripcion_propiedad">Descripción de la propiedad</string>
    <string name="agregar_fotos">Fotos de la propiedad</string>
    <string name="guardar_propiedad">Guardar Propiedad</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="crear_una_propiedad">Crear una Propiedad</string>
    <string name="ver_propiedades">Ver Propiedades</string>
    <string name="error_edt">El campo no puede estar vacío</string>
    <string name="properties">Propiedades</string>
    <string name="create_new_properties">Crear propiedad</string>
    <string name="empty_property">Aun no ha creado propiedades</string>
    <string name="ubicacion_propiedad">Ubicación de la propiedad</string>
    <string name="ver_ubicacion">Ver ubicación</string>
    <string name="tipo">Tipo</string>
    <string name="huesped">Huéspedes</string>
    <string name="camas">Camas</string>
    <string name="banos">Baños</string>
    <string name="detalles">Detalles</string>
    <string name="cambiar_theme">Alternar tema</string>
    <string name="eliminar">Eliminar</string>
    <string name="title_eliminated">Se eliminara constantemente</string>
    <string name="subtitle_eliminated">¿Confirma la eliminación de la propiedad?</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="title_saved">¿Confirma la ubicación de la propiedad?</string>
    <string name="subtitle_saved">La ubicación no ha sido guardada. ¿Deseas guardarla ahora?</string>
    <string name="selected_ubication">Selecciona una ubicación</string>
    <string name="sube_fotos">Sube al menos 5 fotos</string>
    <string name="propiedad_valida">La propiedad es válida</string>
    <string name="datos_numeros_incorrectos">Hay datos incorrectos, revise los campos numéricos.</string>
    <string name="complete_todos">Por favor, complete todos los campos.</string>
    <string name="faltan_permisos">Faltan permisos necesarios</string>
</resources>