<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="?attr/backgroundColor"
    android:textColor="?attr/colorOnSurface"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/_15dp">

        <Button
            android:id="@+id/btnCreateProperty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/crear_una_propiedad" />

        <Button
            android:id="@+id/btnViewProperty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12dp"
            android:text="@string/ver_propiedades" />

        <Button
            android:id="@+id/btnTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12dp"
            android:text="@string/cambiar_theme" />

    </LinearLayout>

</ScrollView>