<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.view.DetailActivity">

    <include
        android:id="@+id/include"
        layout="@layout/app_bar_layout" />

    <TextView
        android:id="@+id/tv_title"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="16sp"
        android:textStyle="bold" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_images"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="3"
        tools:itemCount="3"
        tools:listitem="@layout/item_images" />


    <TextView
        android:id="@+id/tv_subTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="12dp"
        android:text="@string/app_name" />

    <Button
        android:id="@+id/btn_view_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:text="@string/ver_ubicacion" />

    <Button
        android:id="@+id/btn_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="#C50D00"
        android:text="@string/eliminar" />

</LinearLayout>